--- a/Views/Admin/Divisions/Delete.cshtml
+++ b/Views/Admin/Divisions/Delete.cshtml
@@ -1,13 +1,7 @@
 ﻿@model DivisionInfo
 
-@{
-    ViewData["Title"] = "Admin - Delete Division";
-}
+<vc:Header sub-heading="Admin: Delete Division" />
 
-<h1>Delete Division</h1>
-
-<h4>Organization: @SetCurrentOrganizationActionFilter.CurrentOrganization</h4>
-<hr />
 <div>
     <h5>Are you sure you want to delete this division?</h5><br />
     <dl class="row">
@@ -47,6 +41,7 @@
         <input type="hidden" asp-for="@SetCurrentOrganizationActionFilter.CurrentOrganization" />
         <input type="hidden" asp-for="ID" />
         <input type="submit" value="Delete" class="btn btn-danger" @((SetCurrentOrganizationActionFilter.DisableSubmitButton) ? "disabled" : "") /> |
-        <a asp-action="Index" asp-route-organization="@SetCurrentOrganizationActionFilter.CurrentOrganization">Back to List</a>
+        <a asp-action="Index" title="List of Divisions"
+            asp-route-organization="@SetCurrentOrganizationActionFilter.CurrentOrganization">Back to List</a>
     </form>
 </div>
