--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - SoftballTech</title>
+    <title>@TempData["Title"] - SoftballTech</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Sbt-Cosmos-MVC.styles.css" asp-append-version="true" />
@@ -47,10 +47,10 @@
     <footer class="border-top footer text-muted">
         <div class="grid-container">
             <div class="grid-item">
-                &copy; 2023 - SoftballTech
+                &copy; @DateTime.Now.Year - SoftballTech
             </div>
             <div class="grid-item version-container">
-                <span class="version">Version 0.1</span>
+                <span class="version">Version 0.3</span>
             </div>
         </div>
     </footer>
