--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using Sbt.Models
 @using Sbt.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Sbt-Cosmos-MVC
