--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,5 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿
+<vc:Header sub-heading="Home" partial-title="Home Page" />
 
 <div class="text-center">
     <h1 class="display-4">Welcome to the Cosmos Demo for SotballTech! (MVC Version)</h1>
