--- a/Views/StandingsList/Index.cshtml
+++ b/Views/StandingsList/Index.cshtml
@@ -1,18 +1,16 @@
 ﻿@model DivisionListViewModel
 
-@{
-    ViewData["Title"] = SetCurrentOrganizationActionFilter.CurrentOrganization;
-}
+<vc:Header sub-heading="Divisions" />
 
-<h1>@SetCurrentOrganizationActionFilter.CurrentOrganization</h1>
-
-<table class="table">
+<table class="table-responsive">
     <tbody>
         @foreach (var item in Model.DivisionsList)
         {
             <tr>
                 <td>
-                    <a asp-action="Index" asp-controller="Standings" asp-route-organization="@SetCurrentOrganizationActionFilter.CurrentOrganization" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.League) @Html.DisplayFor(modelItem => item.NameOrNumber)</a>
+                    <a asp-action="Index" asp-controller="Standings" title="View Standings"
+                        asp-route-organization="@SetCurrentOrganizationActionFilter.CurrentOrganization" 
+                        asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.League) @Html.DisplayFor(modelItem => item.NameOrNumber)</a>
                 </td>
             </tr>
         }
