- changed data model to work for future SQL Server port - moved business logic code to a more appropriate layer - added request-response pattern - added remote attribute to check division existence in 2 places - added TempData extension for type-safety - removed 1 of 2 global variables (the other will be removed in a future update) - added a 2nd Action Filter to centralize null-checks in controllers

--- a/Views/Admin/Divisions/Create.cshtml
+++ b/Views/Admin/Divisions/Create.cshtml
@@ -1,13 +1,14 @@
-﻿@model DivisionInfo
+﻿@model Division
 
 <vc:Header sub-heading="Admin: Create Division" />
 
 <form method="post">
+    <input type="hidden" asp-for="Organization" />
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group row mb-3">
-        <label asp-for="ID" class="col-3 col-form-label"></label>
-        <input asp-for="ID" class="col-3" aria-required="true" />
-        <span asp-validation-for="ID" class="text-danger col-6"></span>
+        <label asp-for="Abbreviation" class="col-3 col-form-label"></label>
+        <input asp-for="Abbreviation" class="col-3" aria-required="true" />
+        <span asp-validation-for="Abbreviation" class="text-danger col-6"></span>
     </div>
     <div class="form-group row mb-3">
         <label asp-for="League" class="col-3 col-form-label"></label>
@@ -26,7 +27,7 @@
 
 <div>
     <a asp-action="Index" title="List of Divisions"
-        asp-route-organization="@SetCurrentOrganizationActionFilter.CurrentOrganization">Back to List</a>
+        asp-route-organization="@Model.Organization">Back to List</a>
 </div>
 
 @section Scripts {
