--- a/Views/Shared/Error.cshtml
+++ b/Views/Shared/Error.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ErrorViewModel
 @{
-    TempData["Title"] = "Error";
+    TempData.Title("Error");
 }
 
 <h1 class="text-danger">Error.</h1>
