--- a/Views/Admin/Divisions/Delete.cshtml
+++ b/Views/Admin/Divisions/Delete.cshtml
@@ -1,15 +1,16 @@
-﻿@model DivisionInfo
+﻿@model Division
 
 <vc:Header sub-heading="Admin: Delete Division" />
 
 <div>
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <h5>Are you sure you want to delete this division?</h5><br />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ID)
+            @Html.DisplayNameFor(model => model.Abbreviation)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ID)
+            @Html.DisplayFor(model => model.Abbreviation)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.League)
@@ -38,10 +39,10 @@
     </dl>
 
     <form method="post">
-        <input type="hidden" asp-for="@SetCurrentOrganizationActionFilter.CurrentOrganization" />
-        <input type="hidden" asp-for="ID" />
+        <input type="hidden" asp-for="Organization" />
+        <input type="hidden" asp-for="Abbreviation" />
         <input type="submit" value="Delete" class="btn btn-danger" @((SetCurrentOrganizationActionFilter.DisableSubmitButton) ? "disabled" : "") /> |
         <a asp-action="Index" title="List of Divisions"
-            asp-route-organization="@SetCurrentOrganizationActionFilter.CurrentOrganization">Back to List</a>
+           asp-route-organization="@Model.Organization">Back to List</a>
     </form>
 </div>
