--- a/Views/Admin/Divisions/Details.cshtml
+++ b/Views/Admin/Divisions/Details.cshtml
@@ -1,14 +1,14 @@
-﻿@model DivisionInfo
+﻿@model Division
 
 <vc:Header sub-heading="Admin: Division Details" />
 
 <div>
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ID)
+            @Html.DisplayNameFor(model => model.Abbreviation)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ID)
+            @Html.DisplayFor(model => model.Abbreviation)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.League)
@@ -37,8 +37,8 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ID" title="Edit This Division"
-        asp-route-organization="@SetCurrentOrganizationActionFilter.CurrentOrganization">Edit</a> |
+    <a asp-action="Edit" asp-route-abbreviation="@Model.Abbreviation" title="Edit This Division"
+        asp-route-organization="@Model.Organization">Edit</a> |
     <a asp-action="Index" title="List of Divisions"
-        asp-route-organization="@SetCurrentOrganizationActionFilter.CurrentOrganization">Back to List</a>
+       asp-route-organization="@Model.Organization">Back to List</a>
 </div>
