--- a/Views/Admin/Divisions/Edit.cshtml
+++ b/Views/Admin/Divisions/Edit.cshtml
@@ -1,14 +1,14 @@
-﻿@model DivisionInfo
+﻿@model Division
 
 <vc:Header sub-heading="Admin: Edit Division" />
 
 <form method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <input type="hidden" asp-for="ID" />
+    <input type="hidden" asp-for="Abbreviation" />
     <div class="form-group row mb-3">
-        <label asp-for="ID" class="col-3 col-form-label"></label>
-        <label asp-for="ID" class="col-3 col-form-label">@Model.ID</label>
-        <span asp-validation-for="ID" class="text-danger col-6"></span>
+        <label asp-for="Abbreviation" class="col-3 col-form-label"></label>
+        <label asp-for="Abbreviation" class="col-3 col-form-label">@Model.Abbreviation</label>
+        <span asp-validation-for="Abbreviation" class="text-danger col-6"></span>
     </div>
     <div class="form-group row mb-3">
         <label asp-for="League" class="col-3 col-form-label"></label>
@@ -31,7 +31,7 @@
 
 <div>
     <a asp-action="Index" title="List of Divisions"
-        asp-route-organization="@SetCurrentOrganizationActionFilter.CurrentOrganization">Back to List</a>
+       asp-route-organization="@Model.Organization">Back to List</a>
 </div>
 
 @section Scripts {
