--- a/Views/Admin/Divisions/Index.cshtml
+++ b/Views/Admin/Divisions/Index.cshtml
@@ -4,7 +4,7 @@
 
 <p>
     <a asp-action="Create" title="Create"
-        asp-route-organization="@SetCurrentOrganizationActionFilter.CurrentOrganization">Create New Division</a>
+        asp-route-organization="@Model.Organization">Create New Division</a>
 </p>
 
 <div class="table-responsive">
@@ -12,7 +12,7 @@
         <thead>
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.DivisionsList[0].ID)
+                    @Html.DisplayNameFor(model => model.DivisionsList[0].Abbreviation)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.DivisionsList[0].League)
@@ -34,7 +34,7 @@
             {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.ID)
+                    @Html.DisplayFor(modelItem => item.Abbreviation)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.League)
@@ -49,12 +49,12 @@
                     @Html.DisplayFor(modelItem => item.Locked)
                 </td>
                 <td>
-                        <a asp-action="Edit" asp-route-id="@item.ID" title="Edit"
-                            asp-route-organization="@SetCurrentOrganizationActionFilter.CurrentOrganization">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.ID" title="Details"
-                            asp-route-organization="@SetCurrentOrganizationActionFilter.CurrentOrganization">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.ID" title="Delete"
-                            asp-route-organization="@SetCurrentOrganizationActionFilter.CurrentOrganization">Delete</a>
+                        <a asp-action="Edit" asp-route-abbreviation="@item.Abbreviation" title="Edit"
+                            asp-route-organization="@Model.Organization">Edit</a> |
+                        <a asp-action="Details" asp-route-abbreviation="@item.Abbreviation" title="Details"
+                           asp-route-organization="@Model.Organization">Details</a> |
+                        <a asp-action="Delete" asp-route-abbreviation="@item.Abbreviation" title="Delete"
+                           asp-route-organization="@Model.Organization">Delete</a>
                 </td>
             </tr>
     }
@@ -64,5 +64,5 @@
 
 <div>
     <a asp-action="Index" asp-controller="Admin" title="Back to Admin Page"
-        asp-route-organization="@SetCurrentOrganizationActionFilter.CurrentOrganization">Back to Admin</a>
+        asp-route-organization="@Model.Organization">Back to Admin</a>
 </div>
