--- a/Views/Scores/_ScoreSingle.cshtml
+++ b/Views/Scores/_ScoreSingle.cshtml
@@ -15,7 +15,7 @@
 <input type="hidden" asp-for="Schedule[index].Home" />
 <input type="hidden" asp-for="Schedule[index].Visitor" />
 
-<input type="hidden" asp-for="ScheduleVM[index].GameID" />
+<input type="hidden" asp-for="Schedule[index].GameID" />
 
 <div class="form-group row mb-3">
     <label asp-for="Schedule[index].Time" class="col-2 col-form-label fw-bold">Time</label>
@@ -31,14 +31,14 @@
         <label asp-for="Schedule[index].Home" class="col-form-label">@Model.Schedule[index].Home</label>
     </div>
     <div class="col-2">
-        <input asp-for="ScheduleVM[index].HomeScore" class="form-control" autofocus aria-required="true" />
+        <input asp-for="Schedule[index].HomeScore" class="form-control" autofocus aria-required="true" />
     </div>
     <div class="col-2 align-self-center">
-        <input class="form-check-input" asp-for="ScheduleVM[index].HomeForfeit" id="chkHome" />
+        <input class="form-check-input" asp-for="Schedule[index].HomeForfeit" id="chkHome" />
         <label for="chkHome">Home Forfeit</label>
     </div>
     <div class="col-4">
-        <span asp-validation-for="ScheduleVM[index].HomeScore" class="text-danger" id="vldHomeScore"></span>
+        <span asp-validation-for="Schedule[index].HomeScore" class="text-danger" id="vldHomeScore"></span>
     </div>
 </div>
 
@@ -48,40 +48,40 @@
         <label asp-for="Schedule[index].Visitor" class="col-form-label">@Model.Schedule[index].Visitor</label>
     </div>
     <div class="col-2">
-        <input asp-for="ScheduleVM[index].VisitorScore" class="form-control" aria-required="true" />
+        <input asp-for="Schedule[index].VisitorScore" class="form-control" aria-required="true" />
     </div>
     <div class="col-2 align-self-center">
-        <input class="form-check-input" asp-for="ScheduleVM[index].VisitorForfeit" id="chkVisitor" />
+        <input class="form-check-input" asp-for="Schedule[index].VisitorForfeit" id="chkVisitor" />
         <label for="chkVisitor">Visitor Forfeit</label>
     </div>
     <div class="col-4">
-        <span asp-validation-for="ScheduleVM[index].VisitorScore" class="text-danger" id="vldVisitorScore"></span>
+        <span asp-validation-for="Schedule[index].VisitorScore" class="text-danger" id="vldVisitorScore"></span>
     </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
-        $("input[name='ScheduleVM[" + @index + "].VisitorForfeit']").click(function () {
+        $("input[name='Schedule[" + @index + "].VisitorForfeit']").click(function () {
             if ($(this).is(":checked")) {
-                document.querySelector("span[data-valmsg-for='ScheduleVM[" + @index + "].VisitorScore']").textContent = "";
-                document.querySelector("span[data-valmsg-for='ScheduleVM[" + @index + "].HomeScore']").textContent = "";
-                $("input[name='ScheduleVM[" + @index + "].VisitorScore']").val(0);
-                $("input[name='ScheduleVM[" + @index + "].HomeScore']").val(7);
-                if ($("input[name='ScheduleVM[" + @index + "].HomeForfeit']").is(":checked")) {
-                    $("input[name='ScheduleVM[" + @index + "].HomeScore']").val(0);
+                document.querySelector("span[data-valmsg-for='Schedule[" + @index + "].VisitorScore']").textContent = "";
+                document.querySelector("span[data-valmsg-for='Schedule[" + @index + "].HomeScore']").textContent = "";
+                $("input[name='Schedule[" + @index + "].VisitorScore']").val(0);
+                $("input[name='Schedule[" + @index + "].HomeScore']").val(7);
+                if ($("input[name='Schedule[" + @index + "].HomeForfeit']").is(":checked")) {
+                    $("input[name='Schedule[" + @index + "].HomeScore']").val(0);
                 }
             }
         });
 
-        $("input[name='ScheduleVM[" + @index + "].HomeForfeit']").click(function () {
+        $("input[name='Schedule[" + @index + "].HomeForfeit']").click(function () {
             if ($(this).is(":checked")) {
-                document.querySelector("span[data-valmsg-for='ScheduleVM[" + @index + "].VisitorScore']").textContent = "";
-                document.querySelector("span[data-valmsg-for='ScheduleVM[" + @index + "].HomeScore']").textContent = "";
-                $("input[name='ScheduleVM[" + @index + "].VisitorScore']").val(7);
-                $("input[name='ScheduleVM[" + @index + "].HomeScore']").val(0);
-                if ($("input[name='ScheduleVM[" + @index + "].VisitorForfeit']").is(":checked")) {
-                    $("input[name='ScheduleVM[" + @index + "].VisitorScore']").val(0);
+                document.querySelector("span[data-valmsg-for='Schedule[" + @index + "].VisitorScore']").textContent = "";
+                document.querySelector("span[data-valmsg-for='Schedule[" + @index + "].HomeScore']").textContent = "";
+                $("input[name='Schedule[" + @index + "].VisitorScore']").val(7);
+                $("input[name='Schedule[" + @index + "].HomeScore']").val(0);
+                if ($("input[name='Schedule[" + @index + "].VisitorForfeit']").is(":checked")) {
+                    $("input[name='Schedule[" + @index + "].VisitorScore']").val(0);
                 }
             }
         });
