--- a/Views/Shared/Components/Header/Default.cshtml
+++ b/Views/Shared/Components/Header/Default.cshtml
@@ -1,17 +1,19 @@
 ﻿@model Sbt.ViewComponents.HeaderViewComponent.HeaderRecord
 
 @{
+    var CurrentOrganization = TempData.CurrentOrganization();
+
     if (string.IsNullOrEmpty(Model.PartialTitle))
     {
-        TempData["Title"] = SetCurrentOrganizationActionFilter.CurrentOrganization + ": " + Model.SubHeading;
+        TempData.Title(CurrentOrganization + ": " + Model.SubHeading);
     }
     else
     {
-        TempData["Title"] = SetCurrentOrganizationActionFilter.CurrentOrganization + ": " + Model.PartialTitle;
+        TempData.Title(CurrentOrganization + ": " + Model.PartialTitle);
     }
 }
 
-<h1 id="organizationHeader">@Sbt.SetCurrentOrganizationActionFilter.CurrentOrganization</h1>
+<h1 id="organizationHeader">@CurrentOrganization</h1>
 <h4>@Model.SubHeading</h4>
 <hr style="border: 2px solid black" />
 <p />
