--- a/Views/StandingsList/Index.cshtml
+++ b/Views/StandingsList/Index.cshtml
@@ -1,16 +1,19 @@
-﻿@model DivisionListViewModel
+﻿@model IList<Division>
 
 <vc:Header sub-heading="Divisions" />
 
 <table class="table-responsive">
     <tbody>
-        @foreach (var item in Model.DivisionsList)
+        @foreach (var item in Model)
         {
             <tr>
                 <td>
                     <a asp-action="Index" asp-controller="Standings" title="View Standings"
-                        asp-route-organization="@SetCurrentOrganizationActionFilter.CurrentOrganization" 
-                        asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.League) @Html.DisplayFor(modelItem => item.NameOrNumber)</a>
+                        asp-route-organization="@item.Organization" 
+                        asp-route-abbreviation="@item.Abbreviation">
+                        @Html.DisplayFor(modelItem => item.League) @Html.DisplayFor(modelItem => item.NameOrNumber)
+                        (@Html.DisplayFor(modelItem => item.Abbreviation))
+                    </a>
                 </td>
             </tr>
         }
